syntax = "proto3";

enum ProofType {
    AuthorityRound = 0;
    Raft = 1;
    Tendermint = 2;
}

message Proof {
    bytes content = 1; 
    ProofType type = 2;
}

message BlockHeader {
    bytes prevhash = 1;
    uint64 timestamp = 2;
    uint64 height = 3;
    bytes state_root = 4;
    bytes transactions_root = 5;
    bytes receipts_root = 6;
    uint64 gas_used = 7;
    Proof proof = 8;
}

message Status {
    bytes hash = 1;
    uint64 height = 2;
}

enum Crypto {
    SECP = 0;
    SM2 = 1; 
}

message Transaction {
    string to = 1;
    string nonce = 2;
    uint64 quota = 3;
    uint64 valid_until_block = 4;
    bytes data = 5;
}

message UnverifiedTransaction {
    Transaction transaction = 1;
    bytes signature = 2;
    Crypto crypto = 3;
}

message SignedTransaction {
    UnverifiedTransaction transaction_with_sig = 1;
    bytes tx_hash = 2;  // SignedTransaction hash
    bytes signer = 3; //public key
}

// data precompile API

message TxResponse {
    bytes hash = 1;
    bytes result = 2;
}

message BlockBody {
    repeated SignedTransaction transactions = 1;
}

message Block {
    uint32 version = 1;
    BlockHeader header = 2;
    BlockBody body = 3;
}
